[gd_scene load_steps=14 format=2]

[ext_resource path="res://Settings.gd" type="Script" id=1]
[ext_resource path="res://Images/level/sky.png" type="Texture" id=2]
[ext_resource path="res://SlidingTitle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Images/button/back.png" type="Texture" id=4]
[ext_resource path="res://Images/button/back-pressed.png" type="Texture" id=5]
[ext_resource path="res://Images/button/box-checked.png" type="Texture" id=6]
[ext_resource path="res://Images/button/box.png" type="Texture" id=7]



[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/rattytatty/Ratty Tatty/RattyTatty.ttf"

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 50, 50 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "checked",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "unchecked",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/rattytatty/Ratty Tatty/RattyTatty.ttf"

[sub_resource type="DynamicFont" id=6]
size = 80
font_data = SubResource( 5 )

[node name="Settings" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 360, 540 )
texture = ExtResource( 2 )

[node name="SlidingTitle" parent="." instance=ExtResource( 3 )]

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 600, 20 )
normal = ExtResource( 4 )
pressed = ExtResource( 5 )

[node name="MusicLabel" type="Label" parent="."]
margin_left = 62.4331
margin_top = 362.101
margin_right = 471.433
margin_bottom = 556.101
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Music"
align = 1
valign = 1
autowrap = true

[node name="LanguageLabel" type="Label" parent="."]
margin_left = 83.0505
margin_top = 535.455
margin_right = 465.051
margin_bottom = 676.455
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Language"
align = 1
valign = 1
autowrap = true

[node name="MusicTouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 592.311, 453.171 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="MusicTouchScreenButton"]
frames = SubResource( 4 )
animation = "checked"

[node name="LanguageTouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 538.997, 561.008 )
normal = ExtResource( 7 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="LanguageTouchScreenButton"]
margin_left = -0.64624
margin_top = 3.0
margin_right = 104.354
margin_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "en"
align = 1
valign = 1
autowrap = true
uppercase = true
[connection signal="released" from="TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
[connection signal="pressed" from="MusicTouchScreenButton" to="." method="_on_MusicTouchScreenButton_pressed"]
[connection signal="pressed" from="LanguageTouchScreenButton" to="." method="_on_LanguageTouchScreenButton_pressed"]
